-Updates to README
-Added more complete README to the project.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         </div>
         <div class="modal-body">
           Fill in the form to Sign In!
-          <form>
+          <form id="sign-in-x-form">
             <div class="form-group">
               <label for="sign-in-InputEmail1">Email address</label>
               <input name="credentials[email]" type="email" class="form-control" id="sign-in-x-InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
@@ -193,7 +193,7 @@
         </div>
         <div class="modal-body">
           Fill in the form to Sign In!
-          <form>
+          <form id="sign-in-o-form">
             <div class="form-group">
               <label for="sign-in-InputEmail1">Email address</label>
               <input name="credentials[email]" type="email" class="form-control" id="sign-in-o-InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
