--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 
 <body>
   <nav class="navbar navbar-light bg-light">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#sign-up">
-      Sign Up
-    </button>
     <button id="start-game" type="button" class="btn btn-primary start-game">Start Game</button>
   </nav>
 
@@ -29,6 +26,9 @@
         PLAYER X <br>
         <p id="player-x-info"></p>
         <p id="player-x-wins"></p>
+        <button type="button" class="btn btn-primary player-x-sign-up" data-toggle="modal" data-target="#sign-up">
+          Sign Up
+        </button>
         <button type="button" class="btn btn-primary player-x-sign-in" data-toggle="modal" data-target="#sign-in-x">
           Sign In
         </button> <br>
@@ -60,6 +60,9 @@
         PLAYER O <br>
         <p id="player-o-info"></p>
         <p id="player-o-wins"></p>
+        <button type="button" class="btn btn-primary player-o-sign-up" data-toggle="modal" data-target="#sign-up">
+          Sign Up
+        </button>
         <button type="button" class="btn btn-primary player-o-sign-in" data-toggle="modal" data-target="#sign-in-o">
           Sign In
         </button> <br>
@@ -84,7 +87,7 @@
         </div>
         <div class="modal-body">
           Fill out your info and get ready to play!
-          <form>
+          <form id="sign-up-form">
             <div class="form-group">
               <label for="exampleInputEmail1">Email address</label>
               <input name="credentials[email]" type="email" class="form-control" id="sign-up-InputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
@@ -145,7 +148,7 @@
         </div>
         <div class="modal-body">
           Change Your Password Here
-          <form>
+          <form id="change-password-x-form">
             <div class="form-group">
               <label for="InputOldPassword">Old Password</label>
               <input name="passwords[old]" type="password" class="form-control" id="change-password-x-InputOldPassword" placeholder="Enter Old Password">
@@ -221,7 +224,7 @@
         </div>
         <div class="modal-body">
           Change Your Password Here
-          <form>
+          <form id="change-password-o-form">
             <div class="form-group">
               <label for="InputOldPassword">Old Password</label>
               <input name="passwords[old]" type="password" class="form-control" id="change-password-o-InputOldPassword" placeholder="Enter Old Password">
@@ -293,6 +296,25 @@
         </div>
         <div class="modal-footer">
           <button id="draw-play-again" type="button" class="btn btn-primary play-again">Play Again?</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- ErrorModal -->
+  <div id="error" class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Something went wrong!!!</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <p>Uh-oh. something went wrong with the game, please try again!</p>
+        </div>
+        <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         </div>
       </div>
