-Hid Player O sign in and sign up buttons
-Removing all Player-O functionality
-todo: comment out all player O code.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </div>
       <div class="h-100 col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 player-o-content">
-        PLAYER O <br>
+        <!-- PLAYER O <br>
         <p id="player-o-info"></p>
         <p id="player-o-wins"></p>
         <button type="button" class="btn btn-primary player-o-sign-up" data-toggle="modal" data-target="#sign-up">
@@ -71,7 +71,7 @@
         </button> <br>
         <button type="button" class="btn btn-primary player-o-log-out" data-toggle="modal" data-target="#log-out-o">
           log-out
-        </button>
+        </button> -->
       </div>
     </div>
   </div>
