-Commented out all code related to O
-toDo: delete dead code

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     </div>
   </div>
   <!-- sign in O Modal -->
-  <div class="modal fade" id="sign-in-o" tabindex="-1" role="dialog" aria-labelledby="sign-in" aria-hidden="true">
+  <!-- <div class="modal fade" id="sign-in-o" tabindex="-1" role="dialog" aria-labelledby="sign-in" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -211,9 +211,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- change password O Modal -->
-  <div class="modal fade" id="change-password-o" tabindex="-1" role="dialog" aria-labelledby="change-password" aria-hidden="true">
+  <!-- <div class="modal fade" id="change-password-o" tabindex="-1" role="dialog" aria-labelledby="change-password" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -239,9 +239,9 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- log out O Modal -->
-  <div class="modal fade" id="log-out-o" tabindex="-1" role="dialog" aria-labelledby="log-out" aria-hidden="true">
+  <!-- <div class="modal fade" id="log-out-o" tabindex="-1" role="dialog" aria-labelledby="log-out" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -259,7 +259,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- you have won Modal -->
   <div class="modal" id="winner" tabindex="-1" role="dialog">
     <div class="modal-dialog" role="document">
