--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
       </div>
       <div class="h-100 col-xs-3 col-sm-3 col-md-3 col-lg-3 col-xl-3 player-o-content">
         <div> Game Messages </div>
+        <div id="whose-turn"></div>
         <div id="game-messages"></div>
       </div>
     </div>
